--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,9 @@
 name: Slapper
 author: jojoe77777
-version: 1.3.4
+version: 1.3.5
 description: Slapper, the NPC plugin for PocketMine/Genisys
 main: slapper\Main
-api: [3.0.0-ALPHA5]
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
 website: https://github.com/jojoe77777/Slapper
 
 commands:
