--- a/plugin.yml
+++ b/plugin.yml
@@ -3,7 +3,7 @@ author: jojoe77777
 version: 1.3.5
 description: Slapper, the NPC plugin for PocketMine/Genisys
 main: slapper\Main
-api: [3.0.0-ALPHA5, 3.0.0-ALPHA6]
+api: [3.0.0-ALPHA7]
 website: https://github.com/jojoe77777/Slapper
 
 commands:
